--- a/src/index.css
+++ b/src/index.css
@@ -5,9 +5,91 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #f4efe2 !important;
+  color: #463B33 !important;
+  
+}
+
+#root, .app-container {
+  position: relative;
+  min-height: 100vh;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.header{
+  height: 196px;
+}
+
+h1{
+  /* color: #C7463c; */
+}
+
+.footer{
+  height: 50px;
+  background-color: #749f55;
+  color: #f4efe2;
+  margin-top:auto;
+ 
+}
+.background-header {
+  height: 150px;
+  background-image: url('../public/pictures/bacground-picture.JPG');
+  background-position: center;
+  background-size: cover;    
+  background-attachment: fixed;
+}
+
+.header-menu{
+  background-color: #749f55;
+  position: sticky; 
+  top: 0;
+  -webkit-box-shadow: 0 8px 6px -6px grey;
+	   -moz-box-shadow: 0 8px 6px -6px grey;
+	        box-shadow: 0 8px 6px -6px grey;
+}
+
+.header-menu.sticky-header{
+  position: fixed;
+  width: -webkit-fill-available;
+  top: 0;
+}
+
+
+
+.home-picture {
+  height: 150px;
+  background-image: url('../public/pictures/bacground-picture.JPG');
+  background-position: center;
+  background-size: cover;    
+}
+
+.header-link{
+  text-decoration: none;
+  color: #f4efe2;
+  font-size: 20px;
+  font-weight: bolder;
+}
+.header-link:hover{  
+  color: #463B33;
+  /* color: #CED346; */
+}
+
+.contacts-address{
+  width: 450px;
+  background-color: #749f55;
+  color: #f4efe2;
+  -webkit-box-shadow: 0 8px 6px -6px black;
+	   -moz-box-shadow: 0 8px 6px -6px black;
+	        box-shadow: 0 8px 6px -6px black;
+}
+
+.google-map-code>div{
+  border: 4px solid #749f55;
+  -webkit-box-shadow: 0 8px 6px -6px black;
+	   -moz-box-shadow: 0 8px 6px -6px black;
+	        box-shadow: 0 8px 6px -6px black;
 }
