--- a/src/index.css
+++ b/src/index.css
@@ -170,3 +170,6 @@ h1{
 	   -moz-box-shadow: 0 8px 6px -6px black;
 	        box-shadow: 0 8px 6px -6px black;
 }
+.object-fit-cover{
+  object-fit: cover
+}
